--- a/pom.xml
+++ b/pom.xml
@@ -29,15 +29,16 @@
             <artifactId>jdom</artifactId>
             <version>1.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>3.2.0</version>
+        </dependency>
 
         <dependency>
-
             <groupId>mysql</groupId>
-
             <artifactId>mysql-connector-java</artifactId>
-
             <version>5.1.44</version>
-
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
